--- a/src/index.html
+++ b/src/index.html
@@ -8,22 +8,22 @@
     <!-- Bootstrap CSS -->
     <link rel="stylesheet" href="https://stackpath.bootstrapcdn.com/bootstrap/4.3.1/css/bootstrap.min.css" integrity="sha384-ggOyR0iXCbMQv3Xipma34MD+dH/1fQ784/j6cY/iJTQUOhcWr7x9JvoRxT2MZw1T" crossorigin="anonymous">
   </head>
-  <body>
-    <div class="card container">
+  <body >
+  <div class="card bg-success text-white">
         <div class="row">
         <div class="col-4 border rounded shadow bg-danger mx-auto"> 
         <div class="row">
-            <div class="col-2" style="width: 100px; height: 200px; ">suite</div>
+            <div class="col-2" style="width: 75px; height: 150px;font-size:45px; ">S</div>
         </div>  
         <div class="row">
-            <div class="col-4 text-center mx-auto" style="width: 100px; height: 200px;"> 7</div>
+            <div class="col-4 text-center mx-auto" style="width: 100px; height: 200px; font-size:55px;"> 7</div>
         </div>  
         <div class="row">
-            <div class="col-2 ml-auto" >suite</div>
-        </div>    
+            <div class="col-2" style="width: 75px; height: 150px;font-size:45px; ">S</div>
+        </div>   
         </div>
     </div>
-    </div>
+  </div>
         <!-- do not remove this bundle.js tag -->
         <script src="https://code.jquery.com/jquery-3.3.1.slim.min.js" integrity="sha384-q8i/X+965DzO0rT7abK41JStQIAqVgRVzpbzo5smXKp4YfRvH+8abtTE1Pi6jizo" crossorigin="anonymous"></script>
     <script src="https://cdnjs.cloudflare.com/ajax/libs/popper.js/1.14.7/umd/popper.min.js" integrity="sha384-UO2eT0CpHqdSJQ6hJty5KVphtPhzWj9WO1clHTMGa3JDZwrnQq4sF86dIHNDz0W1" crossorigin="anonymous"></script>
